<resources>
    <string name="app_name">Alyn SA-MP Mobile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">123</string>
    <string name="recyclerview">123</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="home">Home</string>
    <string name="alyn_sa_mp">Alyn SA-MP</string>
    <string name="mobile">Mobile</string>
    <string name="add_server">Add Server</string>
    <string name="host_port">HOST:PORT</string>
    <string name="ic_round">ic round</string>
    <string name="changes">Changes</string>
    <string name="discord">Discord</string>
    <string name="website">Website</string>
    <string name="github">GitHub</string>
    <string name="preview">Preview</string>
    <string name="search">Search...</string>
    <string name="todo">TODO</string>
    <string name="sa_mp_version">SA-MP Version</string>
    <string name="select">Select</string>
    <string name="system_keyboard">System Keyboard</string>
    <string name="display_fps">Display FPS</string>
    <string name="full_screen_mode">Full Screen Mode</string>
    <string name="voice_chat">Voice Chat</string>
    <string name="chat_timestamp">Chat Timestamp</string>
    <string name="modify_game_files">Modify Game Files</string>
    <string name="cleo_scripts">CLEO Scripts</string>
    <string name="aml_scripts">AML Scripts</string>
    <string name="monetloader_scripts">MonetLoader Scripts</string>
    <string name="modloader">Modloader</string>
    <string name="game_files_type">Game Files Type</string>
    <string name="chat_strings">Chat Strings</string>
    <string name="chat_position">Chat Position</string>
    <string name="chat_size">Chat Size</string>
    <string name="reset">RESET</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="more_details">Can\'t find an answer to your question? Join our community Discord and ask us!</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="rate_us">If you are enjoying our app, would you mind rating us on the App Store?</string>
    <string name="maybe_later">Maybe, later</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="title">Title</string>
    <string name="become_a_partner">Do you want to add your Server here? Contact us now!</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="y">Y</string>
    <string name="x">X</string>
    <string name="_0_3_7">0.3.7</string>
    <string name="dropdown_arrow">Dropdown Arrow</string>
    <string name="_5_20">5-20</string>
    <string name="full">FULL</string>
    <string name="partners_servers">Our Partners Servers</string>
    <string name="favorite_servers">Your Favorite Servers</string>
    <string name="offline_mode">GTA: SA Offline Mode</string>
    <string name="game_version">Game Version</string>
    <string name="mod_loader">Mod Loader</string>
    <string name="checking_for_updates_please_wait">CHECKING FOR UPDATES, PLEASE WAIT...</string>
    <string name="ahahaha">ahahaha</string>
    <string name="please_do_not_minimize_or_close_app_while_downloading">Please do not minimize or close app while downloading!</string>
    <string name="updating_game">Updating game...</string>
    <string name="_0">0%</string>
    <string name="none">none</string>
    <string name="_0_mb_0_mb">0 MB / 0 MB</string>
</resources>